--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ license = "Apache-2.0"
 license-file = "LICENSE.txt"
 
 [dependencies]
+clap = { version = "3.1.15", features = ["derive", "cargo"] }
+tokio = { version = "1", features = ["full"] }
