--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2021"
 license = "Apache-2.0"
 license-file = "LICENSE.txt"
 
+[[bin]]
+name = "gcu"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "3.1.15", features = ["derive", "cargo"] }
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
