--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ clap = { version = "3.1.15", features = ["derive", "cargo"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
+console = "0.15.0"
