--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ clap = { version = "3.1.15", features = ["derive", "cargo"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
+serde_yaml = "0.8.24"
 console = "0.15.0"
