--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "gcloud-utils"
 description = "Google Cloud Utilities."
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
 edition = "2021"
-license-file = "LICENSE.txt"
+license = "MIT/Apache-2.0"
 
 [[bin]]
 name = "gcu"
